third commit: added the 5 section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <header>
                 <div class="logo">
                     <img src="hamburger_logo.png" alt="burger image">
+                    
                     <marquee behavior="scroll" direction="right" scrollamount=".9s" >
                         Burger <span>Bite</span>
                     </marquee>
@@ -130,7 +131,7 @@
             <div class="sect_2__wrap">
                 <!-- wraps the whole content in the burgar -->
 
-                <h2>
+                <h2 >
                     Our Best Seller
                     <i class="fa-solid fa-leaf"></i>
                 </h2>
@@ -405,6 +406,59 @@
             </div>
 
         </section>
+
+        <section class="section_4" id="section_4">
+            <div id="sect__4__wrap">
+                <h2>
+                    We're More Than Just A Burger Kitchen
+                    <i class="fa-solid fa-leaf"></i>
+                </h2>
+
+                <div class="about__BurgerBite">
+                    <div class="about__img">
+                        <img src="vegetable_burgerN-removebg-preview.png" alt="img display a burger of burger bite">
+                    </div>
+                    <div class="about__content">
+                        <p>
+                            <span class="orangeCol">Burger </span><span class="yellowCol">Bite</span> is passionate about
+                            creating culinary masterpieces that satisfies your craving. With years of expertise, our chefs infuse
+                            creativity into every patty using locay secured
+                            ingredients to ensure quality freshness. <span class="boldText">We are Looking forward!</span> to having
+                            you visit our restuarant.
+                        </p>
+
+                        <div class="about__link__wrap">
+                            <a href="#" class="about__link">Online Order</a>
+                            <a href="#" class="about__link">24/7 Service</a>
+                            <a href="#" class="about__link">Fine Dinning</a>
+                            <a href="#" class="about__link">Pre Order</a>
+                            <a href="#" class="about__link">Customized Order</a>
+                            <a href="#" class="about__link">Reservations</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- <section class="section_5" id="section_5">
+            <div id="sect__5">
+               <div class="testimonials">
+                    <div class="review__content">
+                        <p>
+                            I have been craving a good burger all week and yours hit the spot.
+                            The cheese was melted to perfection and the bun was soft. so good!
+                        </p>
+                        <span>
+                            Wisdom Agha
+                        </span>
+                    </div>
+                    <div class="review__img">
+                        <img src="test_3.png" alt="image of a testimonial ">
+                    </div>
+               </div>
+            </div>
+        </section> -->
     </main>
 
     <!-- footer section -->
