sixth commit: added the footer

--- a/index.html
+++ b/index.html
@@ -640,7 +640,59 @@
     </main>
 
     <!-- footer section -->
-    <footer>
+    <footer class="footer">
+        <div class="footer__wrap">
+            <h2>
+                <span class="orangeCol_footer">Burger </span>
+                <i class="fa-solid fa-burger"></i>
+                <span class="yellowCol_footer">Bite</span>
+                <i class="fa-solid fa-leaf"></i>
+            </h2>
+
+            <div class="footer__content">
+                <div class="footer__card address">
+                    <h3>Address</h3>
+                    <p>
+                        Ogba Road, Aguda Bus Stop, Ikeja
+                        Lagos  
+                    </p>
+                </div>
+                <div class="footer__card opening">
+                    <h3>Opening</h3>
+                    <p>
+                        Everyday 10am - 9pm 
+                    </p>
+                </div>
+
+                <div class="footer__card menuBurger">
+                    <h3>Menu</h3>
+                    
+                    <span>
+                        <a href="#">Order</a>
+                        <a href="#">Menu</a>
+                        <a href="#">restuarant</a>
+                        <a href="#">Offers</a>
+                        <a href="#">News</a>
+                    </span>
+                </div>
+
+                <div class="footer__card reserve">
+                    <h3>Reservation</h3>
+                    <p>
+                        +234 906 526 7379
+                    </p>
+                </div>
+
+                <div class="footer__card support">
+                    <h3>Support</h3>
+                    <span>
+                        <a href="#">FAQ</a>
+                        <a href="#">Customer Care</a>
+                    </span>
+                </div>
+
+            </div>
+        </div>
 
     </footer>
 
