--- a/index.html
+++ b/index.html
@@ -664,6 +664,7 @@
                     </p>
                 </div>
 
+                
                 <div class="footer__card menuBurger">
                     <h3>Menu</h3>
                     
@@ -692,6 +693,11 @@
                 </div>
 
             </div>
+
+            <p>
+                2024&copy;<span class="orangCol">B</span><span class="yelCol">B</span> . 
+                All rights reserved.
+            </p>
         </div>
 
     </footer>
