seventh commit: fixed the reponsive of the footer to screen lower than  480px

--- a/index.html
+++ b/index.html
@@ -528,42 +528,7 @@
                     
                </div>
 
-                <!-- 
-               <div class="testimonial_2">
-                    <div class="slide__contianer swiper">
-
-                        <div class="slide__content">
-                            <div class="card__wrapper swiper-wrapper">
-                                <div class="card swiper-slide">
-                                    <div class="img__content">
-                                        <span class="overley2"></span>
-
-                                        <div class="card__image">
-                                            <img src="test_3.png" alt="" class="card__img">
-                                        </div>
-                                    </div>
-
-                                    <div class="card__content">
-                                        <h2 class="name">Chloe Fredrick</h2>
-                                        <p class="description">
-                                            I have been craving a good burger all week and yours hit the spot.
-                                            The cheese was melted to perfection and the bun was soft. so good!
-                                        </p>
-
-                                        <a href="#">
-                                            <button class="viewMoreBtn">View More</button>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-button-next"></div>
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-pagination"></div>
-                        </div>
-
-                    </div>
-
-               </div> -->
+             
             </div>
 
         </section>
@@ -693,13 +658,12 @@
                 </div>
 
             </div>
-
-            <p>
-                2024&copy;<span class="orangCol">B</span><span class="yelCol">B</span> . 
-                All rights reserved.
-            </p>
         </div>
 
+        <p class="bottom__fotter">
+            2024&copy;<span class="orangCol">B</span><span class="yelCol">B</span> . 
+            All rights reserved.
+        </p>
     </footer>
 
     <!-- scripting -->
